[tool.poetry]
name = "keyboard-visualizer"
version = "0.1.0"
description = "visualize keyboard"
authors = ["worldmaker <worldmaker18349276@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
keyboard = "^0.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
